# XFileTransit

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  build.bat  buildLinux.sh  buildWindow.bat  mingw-toolchain.cmake  msvc-toolchain.cmake
doc/: 文件结构251226.md
src/: CMakeLists.txt  XFileTransit.pro  main.cpp  res.qrc
src/UI/: MainWindow.qml
src/UI/MainWindow/: MainWindow.qml
src/include/common/: DebugOutputer.h
src/include/control/: EventBusManager.h  GlobalStatusManager.h  NetworkController.h  SettingsController.h
src/include/control/FileSyncEngine/: FileSyncEngine.h
src/include/control/MsgParser/: JsonParser.h  Parser.h  SignalJsonParser.h  UserJsonParser.h
src/include/driver/impl/: FileUtility.h  MsgBuilder.h  Nlohmann.h  OpensslDriver.h  OuterMsgBuilder.h  OuterMsgParser.h  P2PDriver.h  SettingsFile.h  SignalJsonDriver.h  TcpDriver.h  UserJsonDriver.h  WebSocket.h
src/include/driver/impl/FileSyncEngine/: FileMsgBuilder.h  FileParser.h  FileReceiver.h  FileSender.h
src/include/driver/impl/FileSyncEngine/P2P/: P2PFileSender.h
src/include/driver/impl/FileSyncEngine/Tcp/: TcpFileReceiver.h  TcpFileSender.h
src/include/driver/impl/Network/: P2PDriver.h  TcpDriver.h  WebSocket.h
src/include/driver/interface/: FileStreamHelper.h  JsonFactoryInterface.h  MsgBuilderInterface.h  NetworkInterface.h  OuterMsgBuilderInterface.h  OuterMsgParserInterface.h  PlatformSocket.h  SecurityInterface.h  SettingsFileInterface.h
src/include/driver/interface/FileSyncEngine/: FileMsgBuilderInterface.h  FileParserInterface.h  FileReceiverInterface.h  FileSenderInterface.h  FileSyncEngineInterface.h
src/include/driver/interface/Network/: NetworkInterface.h  P2PInterface.h  TcpInterface.h
src/include/eventbus/: EventBus.hpp
src/include/eventbus/ThreadPool/: PriorityQueue.hpp  Queue.h  ThreadPool.hpp  ThreadQueue.hpp
src/include/eventbus/threadpool/: ThreadPool.hpp  ThreadQueue.hpp
src/include/model/: ConnectionManager.h  DeviceListModel.h  FileIconManager.h  FileListModel.h  ICMPScanner.h  ModelManager.h  NetworkInfoModel.h  SettingsModel.h  UpdateManager.h
src/res/: res.qrc
src/res/logo/: app.manifest  logo.rc
src/res/settings/: settings.json
src/res/tools/: updateLinux.sh
src/res/version/: version.json
src/source/control/: CMakeLists.txt  NetworkController.cpp  SettingsController.cpp
src/source/control/FileSyncEngine/: FileSyncEngine.cpp
src/source/control/MsgParser/: JsonParser.cpp  SignalJsonParser.cpp  UserJsonParser.cpp
src/source/driver/: CMakeLists.txt
src/source/driver/impl/: MsgBuilder.cpp  Nlohmann.cpp  OpensslDriver.cpp  OuterMsgBuilder.cpp  OuterMsgParser.cpp  P2PDriver.cpp  SettingsFile.cpp  SignalJsonDriver.cpp  TcpDriver.cpp  UserJsonDriver.cpp  WebSocket.cpp
src/source/driver/impl/FileSyncEngine/: FileMsgBuilder.cpp  FileParser.cpp  FileReceiver.cpp  FileSender.cpp
src/source/driver/impl/FileSyncEngine/P2P/: P2PFileSender.cpp
src/source/driver/impl/FileSyncEngine/Tcp/: TcpFileReceiver.cpp  TcpFileSender.cpp
src/source/driver/impl/Network/: P2PDriver.cpp  TcpDriver.cpp  WebSocket.cpp
src/source/model/: CMakeLists.txt  ConnectionManager.cpp  DeviceListModel.cpp  FileIconManager.cpp  FileListModel.cpp  ICMPScanner.cpp  ModelManager.cpp  NetworkInfoModel.cpp  SettingsModel.cpp  UpdateManager.cpp
src/translations/: en.ts  zh_CN.ts
src/ui/: ConnectRequestDialog.qml  DeviceListWindow.qml  GeneralDialog.qml  LoadingDialog.qml  MainWindow.qml  NetworkInfoDialog.qml  SettingsWindow.qml
tools/package/: generate_release_appimage.sh  generate_release_deb.sh  generate_release_tar_gz.sh
tools/package/DebTemplete/DEBIAN/: control  postinst  postrm
tools/package/DebTemplete/usr/share/applications/: XFileTransit.desktop
tools/update/: configMerger.go  updateLinux.sh
